--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Caveat
+      fonts:
+        - asset: assets/fonts/Caveat-VariableFont_wght.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
